2008-04-01  Ben Elliston  <bje@au.ibm.com>

	* doc/c-tree.texi (Function Basics): Fix grammatical error.

2008-03-31  Seongbae Park <seongbae.park@gmail.com>

	* common.opt (fprofile-dir=, fprofile-use=, fprofile-generate=):
	New options
	(fprofile-use): Add var flag_profile_use
	* coverage.c (coverage_begin_output): Do not open a gcno file for output
	only if -ftest-coverage is set.
	Do not add getpwd() to gcda file path.
	(build_gcov_info): Check the new flag 
	flag_profile_datafile_relative_path.
	(coverage_init): Use profile_data_prefix.
	Read profile counter only if flag_profile_use is set.
	* opts.c (common_handle_option): New option fprofile-use=,
	fprofile-dir=, fprofile-generate=.
	* toplev.c (profile_data_prefix): New variable definition.
	* toplev.h (profile_data_prefix): New declaration.
	* doc/invoke.tex (Option Summary, Optimization Options):
	Add new options.

2008-03-31  James E. Wilson  <wilson@tuliptree.org>

	* varasm.c (output_constant_pool_1): In LABEL_REF check, use tmp
	consistently.

	PR target/35695
	* config/ia64/div.md (recip_approx_rf): Use UNSPEC not DIV.
	* config/ia64/ia64.c (rtx_needs_barrier): Handle
	UNSPEC_FR_RECIP_APPROX_RES.
	* config/ia64/ia64.md (UNSPEC_FR_RECIP_APPROX_RES): Define.

2008-03-31  Volker Reichelt  <v.reichelt@netcologne.de>

	PR c/35750
	* c-decl.c (store_parm_decls_oldstyle): Skip invalid parameters.

2008-03-31  Andrew Pinski  <andrew_pinski@playstation.sony.com>

	PR middle-end/30186
	* fold-const.c (fold_indirect_ref_1): Support accessing non first
	element of the vector via a pointer.

2008-03-31  Ian Lance Taylor  <iant@google.com>

	* tlink.c (scan_linker_output): Look for symbol name in single
	quotes.

2008-03-31  Jan Hubicka  <jh@suse.cz>

	* builtins.c (expand_builtin_setjmp_receiver): Update call of
	get_arg_pointer_save_area.
	* expr.c (init_expr): Just clear out rtl.expr.
	* function.c (free_after_compilation): Clear out whole RTL structure.
	(get_func_frame_size): Merge into ...