@@ -3889,20 +3889,20 @@ m32c_leaf_function_p (void)
   struct sequence_stack *seq;
   int rv;
 
-  saved_first = cfun->emit->x_first_insn;
-  saved_last = cfun->emit->x_last_insn;
-  for (seq = cfun->emit->sequence_stack; seq && seq->next; seq = seq->next)
+  saved_first = rtl.emit.x_first_insn;
+  saved_last = rtl.emit.x_last_insn;
+  for (seq = rtl.emit.sequence_stack; seq && seq->next; seq = seq->next)
     ;
   if (seq)
     {
-      cfun->emit->x_first_insn = seq->first;
-      cfun->emit->x_last_insn = seq->last;
+      rtl.emit.x_first_insn = seq->first;
+      rtl.emit.x_last_insn = seq->last;
     }
 
   rv = leaf_function_p ();
 
-  cfun->emit->x_first_insn = saved_first;
-  cfun->emit->x_last_insn = saved_last;
+  rtl.emit.x_first_insn = saved_first;
+  rtl.emit.x_last_insn = saved_last;
   return rv;
 }
 
@@ -3918,7 +3918,7 @@ m32c_function_needs_enter (void)
   rtx fb = gen_rtx_REG (Pmode, FB_REGNO);
 
   insn = get_insns ();
-  for (seq = cfun->emit->sequence_stack;
+  for (seq = rtl.emit.sequence_stack;
        seq;
        insn = seq->first, seq = seq->next);
 
