@@ -1,3 +1,13 @@
+2008-04-01  Jan Hubicka  <jh@suse.cz>
+	    Jim Wilson  <wilson@tuliptree.org>
+	    Andreas Tobler <andreast@gcc.gnu.org>
+
+	PR middle-end/35781
+	* m32c/m32.c (m32c_leaf_function_p, m32c_function_needs_enter): Use
+	rtl.emit instead cfun->emit.
+	* sparc/sparc.h (INIT_EXPANDERS): Likewise.
+	* ia64/ia64.h (INIT_EXPANDERS): Likewise.
+
 2008-04-01  Ben Elliston  <bje@au.ibm.com>
 
 	* doc/c-tree.texi (Function Basics): Fix grammatical error.
